tests/invalid/generic_apply_reject_function_call.wio
@Apply(IsInteger<T>)
fn Echo<T>(value: T) -> T {
    return value;
}

fn Entry() -> i32 {
    let value = Echo("bad");
    return value.Length();
}
